Loading symbol, fixed "no data" appearing in the wrong place, fixed "collapse waterfalls" toggle

--- a/zipkin-browser-extension/chrome/skin/classic/zipkin.css
+++ b/zipkin-browser-extension/chrome/skin/classic/zipkin.css
@@ -44,6 +44,18 @@
     padding: 4px;
 }
 
+.zipkin-no-data {
+    opacity: 0.6;
+    text-align: center;
+}
+.zipkin-no-data:hover {
+    opacity: 1;
+}
+
+.zipkin-loading {
+    background: url('loader.gif') transparent no-repeat right top;
+}
+
 /** Visualizations **/
 
 .zipkin-panel-viz-wrapper {
